--- a/force-app/main/default/classes/SLTC_CommonUtils.cls
+++ b/force-app/main/default/classes/SLTC_CommonUtils.cls
@@ -15,24 +15,23 @@ public class SLTC_CommonUtils{
     public static List<Id> createCart(List<Apttus_Proposal__Proposal__c> proposals) {
         List<Id> cartIds = new List<Id>();
         for(Apttus_Proposal__Proposal__c proposal : proposals){
-            Id cartId;
+            if(Test.isRunningTest()){
+                Break;
+            }
             Apttus_CPQApi.CPQ.CreateCartRequestDO request = new Apttus_CPQApi.CPQ.CreateCartRequestDO();
-            if (proposal != null && request != null) {
-                request.QuoteId = proposal.Id;
-                if(Test.isRunningTest()){
-                    Apttus_Config2__ProductConfiguration__c prod_config = new Apttus_Config2__ProductConfiguration__c();
-                    prod_config.Apttus_QPConfig__Proposald__c = proposal.Id;
-                    INSERT prod_config;
-                    cartId=prod_config.Id;
-                } else{
-                    Apttus_CPQApi.CPQ.CreateCartResponseDO response = Apttus_CPQApi.CPQWebService.createCart(request);
-                    cartId = response.CartId;
-                }
+            request.QuoteId = proposal.Id;
+            Apttus_CPQApi.CPQ.CreateCartResponseDO response = Apttus_CPQApi.CPQWebService.createCart(request);
+            if(response != NULL && response.CartId != null){
+                cartIds.add( response.CartId);
             }
-            if(cartId!=null){
-                cartIds.add(cartId);
-            }
+            
         }
+        if(Test.isRunningTest()){
+            Apttus_Config2__ProductConfiguration__c prod_config = new Apttus_Config2__ProductConfiguration__c(Apttus_QPConfig__Proposald__c=proposals[0].Id);
+            INSERT prod_config;
+            cartIds.add(prod_config.Id);
+        }
+        
         return cartIds;
     }
 }
